namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: production
  # A bootstrap token Secret usually resides in the kube-system namespace
