service.yml
apiVersion: v1
kind: Service
metadata:
  name: harfullstack
  namespace: production
spec:
  selector:
    app: harfullstack
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 3000
